# obstacle_detection_jerk_estimator

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
collisions_algorithms/: Birjandi.cpp  Birjandi.h  BirjandiStateDynamics.cpp  BirjandiStateDynamics.h  ResidualError.cpp  ResidualError.h  SuperTwisting.cpp  SuperTwisting.h  Zurlo.cpp  Zurlo.h
etc/: ObstacleDetectionJerkEstimator.in.yaml
src/: ObstacleDetectionJerkEstimator.cpp  ObstacleDetectionJerkEstimator.h  obstacle_detection_jerk_estimator.cpp  obstacle_detection_jerk_estimator.h
tests/etc/: mc_rtc.yaml
thresholds/: CusumThreshold.cpp  CusumThreshold.h  LpfThreshold.cpp  LpfThreshold.h  NiblackThreshold.cpp  NiblackThreshold.h
